# RAG-based-customer_support_chatbot-

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: analytics.py  config.py  session.py
app/api/: main.py  models.py  routes.py
app/generation/: chain.py  prompt.py
app/ingestion/: chunker.py  embedder.py  loader.py  pipeline.py
app/retrieval/: retriever.py  vector_store.py
data/raw/: customer_support_kb.txt
experiments/: INTEGRATION.md  README.md  dashboard.py  findings.md  requirements.txt
experiments/config/: base.yaml  embeddings.yaml  prompts.yaml  retrieval.yaml
experiments/data/: gold_qa.json
experiments/embedding_experiments/: run_embedding_comparison.py
experiments/eval/: dataset.py  harness.py  metrics.py  ragas_eval.py
experiments/prompt_experiments/: run_prompt_ablation.py  templates.py
experiments/results/: emb_all-MiniLM-L6-v2.json  emb_all-mpnet-base-v2.json  emb_bge-base-en-v1.5.json  emb_bge-small-en-v1.5.json  emb_e5-small-v2.json  embedding_comparison_summary.json
experiments/results/prompts/: prompt_ablation_summary.json  prompt_baseline_zero_shot.json  (+7 more)
experiments/retrieval_experiments/: chunking.py  hybrid.py  hyde.py  query_expansion.py  reranking.py  run_retrieval_ablation.py  sparse.py
experiments/utils/: bootstrap.py  mlflow_utils.py  ollama_client.py
scripts/: evaluate.py  ingest.py
tests/: conftest.py  test_analytics.py  test_generation.py  test_ingestion.py  test_retrieval.py
ui/: streamlit_app.py
ui/pages/: analytics.py
(+16 files in other folders)
